ensure narrow workspace tables don't break in layout

--- a/kraken_frontend/src/styling/workspace-table.css
+++ b/kraken_frontend/src/styling/workspace-table.css
@@ -3,9 +3,16 @@
     display: flex;
     flex-direction: column;
     overflow-x: auto;
+    min-width: min-content;
 
     /* Is overwritten by javascript */
     --columns: 1fr 1fr 1fr 1fr;
+}
+
+.workspace-table-header > *,
+.workspace-table-row > * {
+    overflow: hidden;
+    min-width: 16px;
 }
 
 .workspace-table-pre-header {
@@ -30,6 +37,7 @@
 .workspace-table-body {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
     overflow-y: auto;
     flex-grow: 1;
     padding: 0 1.5em;
